--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack.prod.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack.config.js",
     "build:withDevTools": "cross-env WITH_TOOLS_IN_PROD=true yarn build",
-    "build:dev": "cross-env NODE_ENV=development webpack --config ./webpack.dev.js",
+    "build:dev": "cross-env NODE_ENV=development webpack --config ./webpack.config.js",
     "test": "cross-env NODE_ENV=test jest --config ./.jest.config.js",
     "test:dev": "cross-env NODE_ENV=test yarn test -- --watch",
     "storybook": "cross-env NODE_ENV=development start-storybook -p 6009 -s ./src -c .storybook",
