--- a/src/manifest.tpl.json
+++ b/src/manifest.tpl.json
@@ -3,10 +3,6 @@
   "version": "x.x.x",
   "manifest_version": 2,
   "description": "Chrome extension to add focus to Trello boards.",
-  "background": {
-    "scripts": ["assets/scripts/background.js"],
-    "persistent": false
-  },
   "browser_action": {
     "default_popup": "popup.html"
   },
@@ -16,15 +12,5 @@
       "js": ["assets/scripts/content.js"]
     }
   ],
-  "permissions": ["activeTab", "storage"],
-  "icons": {
-    "16": "assets/images/icon.png",
-    "48": "assets/images/icon.png",
-    "128": "assets/images/icon.png"
-  },
-  "key": "<auto_completed>",
-  "oauth2": {
-    "client_id": "<auto_completed>",
-    "scopes": ["https://www.googleapis.com/auth/calendar"]
-  }
+  "permissions": ["*://trello.com/*", "storage"]
 }
