build: add storybook

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:dev": "cross-env NODE_ENV=development webpack --config ./webpack.config.js",
     "test": "cross-env NODE_ENV=test jest --config ./.jest.config.js",
     "test:dev": "cross-env NODE_ENV=test yarn test -- --watch",
-    "storybook": "cross-env NODE_ENV=development start-storybook -p 6009 -s ./src -c .storybook",
-    "storybook:create-standalone": "cross-env NODE_ENV=production build-storybook -c .storybook -o .storybook/.dist",
+    "storybook": "cross-env NODE_ENV=development start-storybook -p 6006",
+    "storybook:build": "cross-env NODE_ENV=production build-storybook -c .storybook -o .storybook/.dist",
     "lint": "cross-env NODE_ENV=production eslint --config .eslintrc.js --ext js,jsx,ts,tsx \".\"",
     "todos": "leasot --exit-nicely src/**/*.{ts,tsx,js,jsx}"
   },
@@ -36,9 +36,14 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
+    "@storybook/react": "^5.0.11",
     "@types/chrome": "0.0.71",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@types/storybook__react": "^4.0.1",
     "babel-core": "^7.0.0-bridge",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
