--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
-    "css-loader": "^1.0.1",
+    "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-import-resolver-babel-module": "^5.0.1",
@@ -68,8 +68,11 @@
     "imagemin-webpack-plugin": "^2.4.2",
     "jest": "^23.6.0",
     "leasot": "^6.6.2",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
     "prettier": "^1.17.1",
-    "style-loader": "^0.22.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "typescript": "^3.4.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.30.0",
