feat: add reset + toggle for focused lists; switch to sass

--- a/src/manifest.tpl.json
+++ b/src/manifest.tpl.json
@@ -12,5 +12,5 @@
       "js": ["assets/scripts/content.js"]
     }
   ],
-  "permissions": ["*://trello.com/*", "storage"]
+  "permissions": ["*://trello.com/*", "storage", "tabs"]
 }
