--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install: yarn install
 
 script:
   - yarn lint
-  - yarn test
+  # - yarn test
   - yarn build
 
 # Will still run for PRs if configured
