docs: fix andrew's name on Readme

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -12,7 +12,7 @@
     },
     {
       "login": "andrew-sims",
-      "name": "Andrew ",
+      "name": "Andrew Sims ",
       "avatar_url": "https://avatars3.githubusercontent.com/u/12777283?v=4",
       "profile": "http://andrewsims.co",
       "contributions": ["design"]
